python/src/a/pid/fuzzy.pxd

from a.pid cimport *

cdef extern from "a/pid/fuzzy.h":
    ctypedef enum a_pid_fuzzy_e:
        A_PID_FUZZY_AND_DEFAULT
        A_PID_FUZZY_AND_ALGEBRA
        A_PID_FUZZY_AND_BOUNDED
        A_PID_FUZZY_OR_DEFAULT
        A_PID_FUZZY_OR_ALGEBRA
        A_PID_FUZZY_OR_BOUNDED
        A_PID_FUZZY_EQU
        A_PID_FUZZY_AND
        A_PID_FUZZY_OR
    ctypedef struct a_pid_fuzzy_s:
        a_pid_s pid
        a_float_t kp
        a_float_t ki
        a_float_t kd
        a_float_t (*op)(a_float_t, a_float_t)
        unsigned int col
        unsigned int buf
    a_size_t A_PID_FUZZY_BUF1(unsigned int num)
    a_float_t (*a_pid_fuzzy_op(unsigned int op))(a_float_t, a_float_t)
    void a_pid_fuzzy_set_op(a_pid_fuzzy_s *ctx, unsigned int op)
    void a_pid_fuzzy_init(a_pid_fuzzy_s *ctx, unsigned int num)
    void a_pid_fuzzy_chan(a_pid_fuzzy_s *ctx, unsigned int num, a_float_t *out, a_float_t *fdb, a_float_t *tmp, a_float_t *err)
    void a_pid_fuzzy_rule(a_pid_fuzzy_s *ctx, unsigned int col, const a_float_t *mec, const a_float_t *mec, const a_float_t *mkp, const a_float_t *mki, const a_float_t *mkd)
    void a_pid_fuzzy_kpid(a_pid_fuzzy_s *ctx, a_float_t kp, a_float_t ki, a_float_t kd)
    void a_pid_fuzzy_buf1(a_pid_fuzzy_s *ctx, void *ptr, a_size_t num)
    void a_pid_fuzzy_buff(a_pid_fuzzy_s *ctx, unsigned int *idx, a_float_t *mms, a_float_t *mat)
    a_float_t a_pid_fuzzy_outf(a_pid_fuzzy_s *ctx, a_float_t set, a_float_t fdb)
    const a_float_t *a_pid_fuzzy_outp(a_pid_fuzzy_s *ctx, const a_float_t *set, const a_float_t *fdb)
    const a_float_t *a_pid_fuzzy_iter(a_pid_fuzzy_s *ctx, const a_float_t *set, const a_float_t *fdb)
    void a_pid_fuzzy_zero(a_pid_fuzzy_s *ctx)
